--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>Moje Portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="css/superslides.css" />
@@ -14,20 +15,43 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
+
   <body>
     <div id="slides">
+      <div class="overlay"></div>
+
       <div class="slides-container">
-        <img src="img/kingfisher-2046453_960_720.webp" alt="" />
-        <img src="img/bird-4681934_960_720.webp" alt="" />
+        <img src="img/matrix-356024_960_720.webp" alt="" />
+        <img src="img/tiger-2535888_960_720.webp" alt="" />
+        <img src="img/bridge-53769_960_720.webp" alt="" />
       </div>
+
+      <div class="titleMessage">
+        <div class="heading">
+          <p class="main">TOMASZ KRUPIŃSKI</p>
+          <p class="sub typed">Solution Architect</p>
+        </div>
+      </div>
+
+      <nav class="slides-navigation">
+        <a href="#" class="next"></a>
+        <a href="#" class="prev"></a>
+      </nav>
     </div>
 
-    <p>jakaś treść...</p>
-    <a href="">jakiś link</a>
-
     <script src="js/jquery.superslides.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <!--
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    -->
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
