--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="titleMessage">
         <div class="heading">
           <p class="main">TOMASZ KRUPIŃSKI</p>
-          <p class="sub typed">Solution Architect</p>
+          <p class="sub typed"></p>
         </div>
       </div>
 
